# Releases

## v1.0.0

* add compressor feature

## v0.2.0

* add authenticated encryption additional associated data
* add crypto protocol version

## v0.1.0

initial release